2017-05-25 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Fixing bug affecting production of pre and post fit at once in certain conditions (fixes TTHFITTER-126)
    * Option added to systematic in order to keep it shape only for certain samples / sum of samples (needed for c-tagging calibration plots, option KeepNormForSamples)
    * Fixing separation plot cosmetics (fixes TTHFITTER-125)

2017-05-23 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Putting back the option NtupleFileUp/Down for backward compatibilty (was superseeded by NtupleFilesUp/Down)
    * Fixing nominal smoothig
    * Polishing
    
2017-05-19 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Fixing bin blinding visualisation and add possibility to keep pre-fit blinding in post -fit (fixes TTHFITTER-123)
    * Add configurable y range for ratio plots (fixes TTHFITTER-124)
    
2017-05-18 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Changing histo creation procedure: root files created before creating histogrmas (closes TTHFITTER-121)
    * fixing crash on yield table creatio (closes TTHFITTER-118)
    * fixing warnings in significance and limit with signal injection (significance affects log files - had to be re-created)
    * fixing problem with validation regions and multi-fit (fixes TTHFITTER-122)
    * adding script hupdate (closes TTHFITTER-119)
    
2017-05-17 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Added SaveSuffix option (working on TTHFITTER-122)
    
2017-04-11 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Fixing crash when producing SystDataPlots
    * Fixing ranges of normalisation factor and gamma plots 
    * adding combined significance
    
2017-03-20 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Tagging: TtHFitter-00-03-07
    
2017-03-13 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Fixing decorrelation by sample and ghost samples. Closes TTHFITTER-107